Docker file updated